# oxidized-rasterstats

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  NOTICE.md  README.md  codex_exec_plans.md  pyproject.toml
.github/workflows/: ci.yml  release-wheels.yml
benchmarks/results/: 2026-02-16.md
docs/: acceptance-test-review.md  attribution.md  review_guide.md
docs/upstream_issues/: open_issues_2026-02-16.json  open_issues_2026-02-16.md
python/rasterstats/: _dispatch.py  _fallback_py.py  _version.py  main.py  point.py
scripts/: build_weppcloud_fixtures.py  generate_api_manifest.py  run_parity_tests.sh  sync_upstream.py
src/: errors.rs  geom.rs  lib.rs  point.rs  raster.rs  stats.rs  zonal.rs
tests/compat/: api_manifest.json  test_api_surface.py  test_dispatch_fallback_observability.py  test_fixture_manifests.py
tests/data/: dataset_mask.tif  slope_classes.tif
tests/fixtures/weppcloud/manifests/: large_local.json  small.json
tests/fixtures/weppcloud/small/dem/wbt/: channels.WGS.geojson  channels.geojson  discha.tif  floaccum.tif  fvslop.tif  (+4 more)
tests/fixtures/weppcloud/small/landuse/: nlcd.tif
tests/fixtures/weppcloud/small/watershed/: hillslope_points.geojson  hillslopes.parquet
tests/perf/: test_perf_weppcloud.py
tests/regression/: test_issue_105_nodata_non_overlap.py  test_issue_215_infinity_values.py  test_issue_227_boundless_degradation_guard.py  test_issue_243_nodata_empty_zone.py  test_issue_246_masked_array_input.py  test_issue_285_memory_growth_loop.py  test_issue_286_large_input_stability.py  test_issue_288_incomplete_shapefile_error.py  test_issue_294_point_query_nodata_boundary.py  test_issue_303_progress_unsized_iterable.py  test_issue_98_nonstandard_affine.py
tests/upstream/data/: all_nodata.tif  slope.tif  slope_nodata.tif
