[package]
name = "oxidized-rasterstats"
version = "0.1.0"
edition = "2021"

[lib]
name = "_rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"] }
gdal = "0.18"
gdal-sys = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
approx = "0.5"
