[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "oxidized-rasterstats"
version = "0.1.0"
description = "Rust-accelerated drop-in replacement for python-rasterstats"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Oxidized Rasterstats Maintainers" }]
maintainers = [{ name = "Roger Lew" }]
requires-python = ">=3.9"
dependencies = [
  "affine",
  "click>7.1,!=8.2.1",
  "cligj>=0.4",
  "fiona",
  "numpy>=1.22",
  "rasterio>=1.3",
  "simplejson",
  "shapely",
]

[project.optional-dependencies]
progress = ["tqdm"]
test = [
  "pytest>=7.0",
  "pytest-cov",
  "pytest-benchmark",
  "geopandas>=0.13",
  "pyshp>=1.1.4",
]
perf = ["pytest-benchmark"]
fixtures = ["pyarrow"]

[project.entry-points."rasterio.rio_plugins"]
zonalstats = "rasterstats.cli:zonalstats"
pointquery = "rasterstats.cli:pointquery"

[project.urls]
Repository = "https://example.invalid/oxidized-rasterstats"

[tool.maturin]
python-source = "python"
module-name = "rasterstats._rs"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  "ignore::UserWarning",
]
markers = [
  "perf_small: performance checks on small committed fixture",
  "perf_large: performance checks on large local fixture",
]
